# Shared_Lib_Template

./: .gitignore  CMakeLists.txt  README.md  generate_project.bat
include/: func.hpp
include/lib/: core.hpp  func.hpp
src/: func.cpp
src/app/: main.cpp
src/lib/: func.cpp
